--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,5 +7,10 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
+    <EditText
+        android:id="@+id/myEditText"
+        android:hint="Placeholder text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
