--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <EditText
-        android:id="@+id/myEditText"
+        android:id="@+id/myEditTextWidget"
         android:hint="Placeholder text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
