Added layout attributes to the widgets...

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,26 @@
         android:id="@+id/myEditTextWidget"
         android:hint="Placeholder text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <Button
-        android:id="@+id/minKnapp"
-        android:text="Klicka på mig"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 
     <ImageView
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:contentDescription="Earth"
-        app:srcCompat="@drawable/publicdomainearth"/>
+        app:srcCompat="@drawable/publicdomainearth"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"/>
+
+    <Button
+        android:id="@+id/minKnapp"
+        android:text="Klicka på mig"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="50dp"
+        android:padding="10dp"/>
 
 </LinearLayout>
