--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="50dp"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:background="@color/colorAccent"/>
 
 </LinearLayout>
